[package]
name = "zonebuilder"
version = "0.3.0"
authors = ["Robin Lovelace <rob00x@gmail.com>", "Dustin Carlino", "Stephan Hügel"]
edition = "2018"
license = "AGPL-3.0-or-later"
description = "A crate and command-line interface to create regular geographic zones for urban analysis"
homepage = "https://github.com/zonebuilders/"
documentation = "https://github.com/zonebuilders/zonebuilder-rust"
repository = "https://github.com/zonebuilders/zonebuilder-rust"
keywords = ["zones", "geo", "spatial", "geospatial"]
categories = ["science", "command-line-utilities"]
exclude = [
    "web"
]

[lib]
crate-type = ["cdylib", "lib"]

[features]
wasm = ["wasm-bindgen"]

[dependencies]
geo = { version = "0.18.0", features=["use-serde"] }
geographiclib-rs = "0.2.0"
geojson = { version = "0.22.2", features=["geo-types"] }
serde_json = { version = "1.0.0" }
structopt = "0.3.21"
wasm-bindgen = { version = "0.2.70", optional = true }

